Fix top spacing of Media and Text
- Remove the margin top of first wp-group appeared into a layout pattern

--- a/assets/src/scss/pages/_page.scss
+++ b/assets/src/scss/pages/_page.scss
@@ -53,6 +53,12 @@
     .navigation-bar_min ~ & {
       padding-top: var(--navbar-menu-min-height);
     }
+
+    .wp-block-group:first-child {
+      & > .wp-block-group:first-child {
+        margin-top: 0;
+      }
+    }
   }
 }
 
